--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "apexcharts": "^3.35.5",
+    "axios": "^0.27.2",
     "i18next": "^21.9.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -23,7 +24,6 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.3",
-    "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
     "web-vitals": "^1.0.1"
   },
