--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-# REACT_APP_BASE_URL=https://jsonplaceholder.typicode.com/users
-REACT_APP_BASE_URL=http://localhost:3000/user
+# REACT_APP_BASE_URL=https://jsonplaceholder.typicode.com/
+REACT_APP_BASE_URL=http://localhost:3000
